[gd_scene load_steps=11 format=4 uid="uid://b0ngbcfedv0js"]

[ext_resource type="Script" uid="uid://beh5jj3cug0u3" path="res://Kobold Cave/Levels/level_base.gd" id="1_725pf"]
[ext_resource type="TileSet" uid="uid://d2sesonkjewl3" path="res://Kobold Cave/new_tile_set.tres" id="2_k2r8s"]
[ext_resource type="PackedScene" uid="uid://cv22pcm2jgbaa" path="res://Kobold Cave/Entity/Player/player.tscn" id="3_bhmet"]
[ext_resource type="Script" uid="uid://dbf8r7wqq34yj" path="res://Kobold Cave/Components/2D/Camera Boundry/camera_boundry.gd" id="4_1273t"]
[ext_resource type="PackedScene" uid="uid://diy121fampbk4" path="res://Kobold Cave/Level Objects/Goal Flag/goal_flag.tscn" id="5_0ickf"]
[ext_resource type="PackedScene" uid="uid://cn8dbjksgpxgc" path="res://Kobold Cave/Components/2D/Level Boundry/level_boundry.tscn" id="6_0ickf"]
[ext_resource type="PackedScene" uid="uid://b7woleo53xw3t" path="res://Kobold Cave/Components/2D/Trigger/trigger_base.tscn" id="7_wp2ok"]
[ext_resource type="Script" uid="uid://ccq3bxklty4a6" path="res://Kobold Cave/Components/2D/Trigger Response/Camera Zoom/cam_zoom.gd" id="8_tdsja"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_mmyqp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qwbac"]
size = Vector2(1280, 896)

[node name="LevelGTFO" type="Node2D"]
script = ExtResource("1_725pf")
metadata/_custom_type_script = "uid://beh5jj3cug0u3"

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD7/wQAAQAAAAAAAAD8/wQAAQAAAAAAAAD9/wQAAQAAAAAAAAD+/wQAAQAAAAAAAAD//wQAAQAAAAAAAAAAAAQAAQAAAAAAAAABAAQAAQAAAAAAAAACAAQAAQAAAAAAAAADAAQAAQAAAAAAAAAEAAQAAQAAAAAAAAAFAAQAAQAAAAAAAAD7/wMAAQAAAAAAAAD7/wIAAQAAAAAAAAD7/wEAAQAAAAAAAAD7/wAAAQAAAAAAAAD7////AQAAAAAAAAD7//7/AQAAAAAAAAD7//3/AQAAAAAAAAD7//z/AQAAAAAAAAD8//z/AQAAAAAAAAD9//z/AQAAAAAAAAD+//z/AQAAAAAAAAD///z/AQAAAAAAAAAAAPz/AQAAAAAAAAABAPz/AQAAAAAAAAACAPz/AQAAAAAAAAADAPz/AQAAAAAAAAAEAPz/AQAAAAAAAAAFAPz/AQAAAAAAAAAFAP3/AQAAAAAAAAAFAP7/AQAAAAAAAAAFAP//AQAAAAAAAAAFAAAAAQAAAAAAAAAGAAQAAQAAAAAAAAAHAAQAAQAAAAAAAAAIAAQAAQAAAAAAAAAJAAQAAQAAAAAAAAAKAAQAAQAAAAAAAAALAAQAAQAAAAAAAAAMAAQAAQAAAAAAAAANAAQAAQAAAAAAAAAOAAQAAQAAAAAAAAAPAAQAAQAAAAAAAAAQAAQAAQAAAAAAAAARAAQAAQAAAAAAAAASAAQAAQAAAAAAAAATAAQAAQAAAAAAAAAUAAQAAQAAAAAAAAAVAAQAAQAAAAAAAAAWAAQAAQAAAAAAAAAXAAQAAQAAAAAAAAAYAAQAAQAAAAAAAAAZAAQAAQAAAAAAAAAaAAQAAQAAAAAAAAAbAAQAAQAAAAAAAAAcAAQAAQAAAAAAAAAdAAQAAQAAAAAAAAAeAAQAAQAAAAAAAAAfAAQAAQAAAAAAAAAgAAQAAQAAAAAAAAAhAAQAAQAAAAAAAAAiAAQAAQAAAAAAAAAjAAQAAQAAAAAAAAAkAAQAAQAAAAAAAAAlAAQAAQAAAAAAAAAmAAQAAQAAAAAAAAAnAAQAAQAAAAAAAAAoAAQAAQAAAAAAAAApAAQAAQAAAAAAAAAqAAQAAQAAAAAAAAArAAQAAQAAAAAAAAAsAAQAAQAAAAAAAAAtAAQAAQAAAAAAAAAuAAQAAQAAAAAAAAAvAAQAAQAAAAAAAAAwAAQAAQAAAAAAAAAxAAQAAQAAAAAAAAAyAAQAAQAAAAAAAAAzAAQAAQAAAAAAAAA0AAQAAQAAAAAAAAA1AAQAAQAAAAAAAAA2AAQAAQAAAAAAAAA3AAQAAQAAAAAAAAA4AAQAAQAAAAAAAAA5AAQAAQAAAAAAAAA6AAQAAQAAAAAAAAA7AAQAAQAAAAAAAAA8AAQAAQAAAAAAAAA9AAQAAQAAAAAAAAA+AAQAAQAAAAAAAAA/AAQAAQAAAAAAAABAAAQAAQAAAAAAAABBAAQAAQAAAAAAAABCAAQAAQAAAAAAAABDAAQAAQAAAAAAAABEAAQAAQAAAAAAAABFAAQAAQAAAAAAAABGAAQAAQAAAAAAAABHAAQAAQAAAAAAAABIAAQAAQAAAAAAAABJAAQAAQAAAAAAAABKAAQAAQAAAAAAAABLAAQAAQAAAAAAAABMAAQAAQAAAAAAAABNAAQAAQAAAAAAAABOAAQAAQAAAAAAAABPAAQAAQAAAAAAAABQAAQAAQAAAAAAAABRAAQAAQAAAAAAAABSAAQAAQAAAAAAAABTAAQAAQAAAAAAAABUAAQAAQAAAAAAAABUAP//AQAAAAAAAABUAP7/AQAAAAAAAABTAP3/AQAAAAAAAABRAPv/AQAAAAAAAABQAPv/AQAAAAAAAABPAPv/AQAAAAAAAABOAPr/AQAAAAAAAABNAPr/AQAAAAAAAABMAPr/AQAAAAAAAABLAPr/AQAAAAAAAABKAPr/AQAAAAAAAABJAPr/AQAAAAAAAABIAPr/AQAAAAAAAABHAPr/AQAAAAAAAABGAPn/AQAAAAAAAABFAPn/AQAAAAAAAABEAPn/AQAAAAAAAABDAPn/AQAAAAAAAABCAPn/AQAAAAAAAABBAPn/AQAAAAAAAABAAPn/AQAAAAAAAAA/APn/AQAAAAAAAAA+APr/AQAAAAAAAAA9APr/AQAAAAAAAAA8APr/AQAAAAAAAAA7APr/AQAAAAAAAAA6APr/AQAAAAAAAAA5APr/AQAAAAAAAAA4APv/AQAAAAAAAAA3APv/AQAAAAAAAAA2APv/AQAAAAAAAAA1APv/AQAAAAAAAAA0APv/AQAAAAAAAAAzAPv/AQAAAAAAAAAyAPv/AQAAAAAAAAAxAPv/AQAAAAAAAAAwAPv/AQAAAAAAAAAvAPv/AQAAAAAAAAAuAPv/AQAAAAAAAAAtAPr/AQAAAAAAAAAsAPr/AQAAAAAAAAArAPr/AQAAAAAAAAAqAPr/AQAAAAAAAAApAPr/AQAAAAAAAAAoAPr/AQAAAAAAAAAnAPr/AQAAAAAAAAAmAPr/AQAAAAAAAAAlAPr/AQAAAAAAAAAkAPr/AQAAAAAAAAAjAPr/AQAAAAAAAAAiAPn/AQAAAAAAAAAhAPn/AQAAAAAAAAAgAPj/AQAAAAAAAAAfAPj/AQAAAAAAAAAeAPf/AQAAAAAAAAAdAPf/AQAAAAAAAAAcAPb/AQAAAAAAAAAbAPb/AQAAAAAAAAAaAPX/AQAAAAAAAAAZAPb/AQAAAAAAAAAYAPb/AQAAAAAAAAAXAPf/AQAAAAAAAAAXAPb/AQAAAAAAAAAWAPf/AQAAAAAAAAAVAPf/AQAAAAAAAAAUAPj/AQAAAAAAAAATAPj/AQAAAAAAAAASAPj/AQAAAAAAAAARAPf/AQAAAAAAAAAQAPf/AQAAAAAAAAAPAPf/AQAAAAAAAAAOAPf/AQAAAAAAAAANAPb/AQAAAAAAAAAMAPb/AQAAAAAAAAAOAPb/AQAAAAAAAAALAPb/AQAAAAAAAAAKAPf/AQAAAAAAAAAJAPj/AQAAAAAAAAAIAPn/AQAAAAAAAAAHAPr/AQAAAAAAAAAGAPv/AQAAAAAAAABVAAAAAQAAAAAAAABWAAAAAQAAAAAAAABXAAAAAQAAAAAAAABYAAAAAQAAAAAAAABZAAAAAQAAAAAAAABZAAEAAQAAAAAAAABZAAIAAQAAAAAAAABZAAMAAQAAAAAAAABZAAQAAQAAAAAAAABYAAQAAQAAAAAAAABXAAQAAQAAAAAAAABWAAQAAQAAAAAAAABVAAQAAQAAAAAAAAAUAAMAAQAAAAAAAAAVAAIAAQAAAAAAAAAWAAEAAQAAAAAAAAAWAAAAAQAAAAAAAAAWAAIAAQAAAAAAAAAXAAIAAQAAAAAAAAAWAAMAAQAAAAAAAAAVAAMAAQAAAAAAAAAVAAEAAQAAAAAAAAAXAAMAAQAAAAAAAAAaAPb/AQAAAAAAAAAaAPf/AQAAAAAAAAAaAPj/AQAAAAAAAAAaAPn/AQAAAAAAAAAaAPr/AQAAAAAAAAAaAPv/AQAAAAAAAAAbAPz/AQAAAAAAAAAbAP3/AQAAAAAAAAAbAP7/AQAAAAAAAAAcAPv/AQAAAAAAAAAcAPr/AQAAAAAAAAAdAPn/AQAAAAAAAAAdAPj/AQAAAAAAAAAbAPf/AQAAAAAAAAAcAPf/AQAAAAAAAAAbAPj/AQAAAAAAAAAbAPn/AQAAAAAAAAAbAPr/AQAAAAAAAAAbAPv/AQAAAAAAAAAcAPj/AQAAAAAAAAAcAPn/AQAAAAAAAABUAPz/AQAAAAAAAABSAPr/AQAAAAAAAABRAPr/AQAAAAAAAABRAPn/AQAAAAAAAABRAPj/AQAAAAAAAABUAPv/AQAAAAAAAABUAPr/AQAAAAAAAABUAPn/AQAAAAAAAABUAPj/AQAAAAAAAABUAPf/AQAAAAAAAABUAPb/AQAAAAAAAABUAPX/AQAAAAAAAABUAPT/AQAAAAAAAABQAPj/AQAAAAAAAABPAPj/AQAAAAAAAABOAPj/AQAAAAAAAABNAPj/AQAAAAAAAABMAPj/AQAAAAAAAABLAPj/AQAAAAAAAABKAPj/AQAAAAAAAABJAPj/AQAAAAAAAABIAPj/AQAAAAAAAABHAPj/AQAAAAAAAABGAPj/AQAAAAAAAABFAPj/AQAAAAAAAABEAPj/AQAAAAAAAABDAPj/AQAAAAAAAABCAPj/AQAAAAAAAABBAPj/AQAAAAAAAABBAPf/AQAAAAAAAABBAPb/AQAAAAAAAABBAPX/AQAAAAAAAABBAPT/AQAAAAAAAABBAPP/AQAAAAAAAABCAPP/AQAAAAAAAABUAPP/AQAAAAAAAABTAPP/AQAAAAAAAABSAPP/AQAAAAAAAABRAPP/AQAAAAAAAABQAPP/AQAAAAAAAABPAPP/AQAAAAAAAABOAPP/AQAAAAAAAABNAPP/AQAAAAAAAABMAPP/AQAAAAAAAABLAPP/AQAAAAAAAABKAPP/AQAAAAAAAABJAPP/AQAAAAAAAABIAPP/AQAAAAAAAABHAPP/AQAAAAAAAABGAPP/AQAAAAAAAABFAPP/AQAAAAAAAABEAPP/AQAAAAAAAABDAPP/AQAAAAAAAAA6APb/AQAAAAAAAAA6APX/AQAAAAAAAAA6APT/AQAAAAAAAAA6APP/AQAAAAAAAAA5APP/AQAAAAAAAAA4APP/AQAAAAAAAAA3APP/AQAAAAAAAAA2APP/AQAAAAAAAAA1APP/AQAAAAAAAAA0APP/AQAAAAAAAAAzAPP/AQAAAAAAAAAyAPP/AQAAAAAAAAAxAPP/AQAAAAAAAAAwAPP/AQAAAAAAAAAvAPP/AQAAAAAAAAAuAPP/AQAAAAAAAAAtAPP/AQAAAAAAAAAsAPP/AQAAAAAAAAArAPP/AQAAAAAAAAAqAPP/AQAAAAAAAAApAPP/AQAAAAAAAAAoAPP/AQAAAAAAAAAnAPP/AQAAAAAAAAAmAPP/AQAAAAAAAAAlAPP/AQAAAAAAAAAkAPP/AQAAAAAAAAAjAPP/AQAAAAAAAAAiAPP/AQAAAAAAAAAhAPP/AQAAAAAAAAAgAPP/AQAAAAAAAAAfAPP/AQAAAAAAAAAeAPP/AQAAAAAAAAAdAPP/AQAAAAAAAAAcAPP/AQAAAAAAAAAbAPP/AQAAAAAAAAAaAPP/AQAAAAAAAAAZAPP/AQAAAAAAAAAYAPP/AQAAAAAAAAAXAPP/AQAAAAAAAAAWAPP/AQAAAAAAAAAVAPP/AQAAAAAAAAAUAPP/AQAAAAAAAAATAPP/AQAAAAAAAAASAPP/AQAAAAAAAAARAPP/AQAAAAAAAAAQAPP/AQAAAAAAAAAPAPP/AQAAAAAAAAAOAPP/AQAAAAAAAAANAPP/AQAAAAAAAAAMAPP/AQAAAAAAAAALAPP/AQAAAAAAAAAKAPP/AQAAAAAAAAAJAPP/AQAAAAAAAAAIAPP/AQAAAAAAAAAHAPP/AQAAAAAAAAAGAPP/AQAAAAAAAAAFAPP/AQAAAAAAAAAEAPP/AQAAAAAAAAADAPP/AQAAAAAAAAACAPP/AQAAAAAAAAABAPP/AQAAAAAAAAAAAPP/AQAAAAAAAAD///P/AQAAAAAAAAD+//P/AQAAAAAAAAD9//P/AQAAAAAAAAD8//P/AQAAAAAAAAD7//P/AQAAAAAAAAD7//T/AQAAAAAAAAD7//X/AQAAAAAAAAD7//b/AQAAAAAAAAD7//f/AQAAAAAAAAD7//j/AQAAAAAAAAD7//n/AQAAAAAAAAD7//r/AQAAAAAAAAD7//v/AQAAAAAAAAD8//v/AQAAAAAAAAD8//r/AQAAAAAAAAD8//n/AQAAAAAAAAD8//j/AQAAAAAAAAD8//f/AQAAAAAAAAD8//b/AQAAAAAAAAD8//X/AQAAAAAAAAD8//T/AQAAAAAAAAD9//T/AQAAAAAAAAD9//X/AQAAAAAAAAD9//b/AQAAAAAAAAD9//f/AQAAAAAAAAD9//j/AQAAAAAAAAD9//n/AQAAAAAAAAD9//r/AQAAAAAAAAD9//v/AQAAAAAAAAD+//v/AQAAAAAAAAD+//r/AQAAAAAAAAD+//n/AQAAAAAAAAD+//j/AQAAAAAAAAD+//f/AQAAAAAAAAD+//b/AQAAAAAAAAD+//X/AQAAAAAAAAD+//T/AQAAAAAAAAD///T/AQAAAAAAAAD///X/AQAAAAAAAAD///b/AQAAAAAAAAD///f/AQAAAAAAAAD///j/AQAAAAAAAAD///n/AQAAAAAAAAD///r/AQAAAAAAAAD///v/AQAAAAAAAAAAAPv/AQAAAAAAAAAAAPr/AQAAAAAAAAAAAPn/AQAAAAAAAAAAAPj/AQAAAAAAAAAAAPf/AQAAAAAAAAAAAPb/AQAAAAAAAAAAAPX/AQAAAAAAAAAAAPT/AQAAAAAAAAABAPT/AQAAAAAAAAABAPX/AQAAAAAAAAABAPb/AQAAAAAAAAABAPf/AQAAAAAAAAABAPj/AQAAAAAAAAABAPn/AQAAAAAAAAABAPr/AQAAAAAAAAABAPv/AQAAAAAAAAACAPv/AQAAAAAAAAACAPr/AQAAAAAAAAACAPn/AQAAAAAAAAACAPj/AQAAAAAAAAACAPf/AQAAAAAAAAACAPb/AQAAAAAAAAACAPX/AQAAAAAAAAACAPT/AQAAAAAAAAADAPT/AQAAAAAAAAADAPX/AQAAAAAAAAADAPb/AQAAAAAAAAADAPf/AQAAAAAAAAADAPj/AQAAAAAAAAADAPn/AQAAAAAAAAADAPr/AQAAAAAAAAADAPv/AQAAAAAAAAAEAPv/AQAAAAAAAAAEAPr/AQAAAAAAAAAEAPn/AQAAAAAAAAAEAPj/AQAAAAAAAAAEAPf/AQAAAAAAAAAEAPb/AQAAAAAAAAAEAPX/AQAAAAAAAAAEAPT/AQAAAAAAAAAFAPT/AQAAAAAAAAAFAPX/AQAAAAAAAAAFAPb/AQAAAAAAAAAFAPf/AQAAAAAAAAAFAPj/AQAAAAAAAAAFAPn/AQAAAAAAAAAFAPr/AQAAAAAAAAAFAPv/AQAAAAAAAAAGAPr/AQAAAAAAAAAGAPn/AQAAAAAAAAAGAPj/AQAAAAAAAAAGAPf/AQAAAAAAAAAGAPb/AQAAAAAAAAAGAPX/AQAAAAAAAAAGAPT/AQAAAAAAAAAHAPT/AQAAAAAAAAAHAPX/AQAAAAAAAAAHAPb/AQAAAAAAAAAHAPf/AQAAAAAAAAAHAPj/AQAAAAAAAAAHAPn/AQAAAAAAAAAIAPj/AQAAAAAAAAAIAPf/AQAAAAAAAAAIAPb/AQAAAAAAAAAIAPX/AQAAAAAAAAAIAPT/AQAAAAAAAAAJAPT/AQAAAAAAAAAJAPX/AQAAAAAAAAAJAPb/AQAAAAAAAAAJAPf/AQAAAAAAAAAKAPb/AQAAAAAAAAAKAPX/AQAAAAAAAAAKAPT/AQAAAAAAAAALAPT/AQAAAAAAAAALAPX/AQAAAAAAAAAMAPX/AQAAAAAAAAAMAPT/AQAAAAAAAAANAPT/AQAAAAAAAAANAPX/AQAAAAAAAAAOAPX/AQAAAAAAAAAOAPT/AQAAAAAAAAAPAPT/AQAAAAAAAAAPAPX/AQAAAAAAAAAPAPb/AQAAAAAAAAAQAPb/AQAAAAAAAAAQAPX/AQAAAAAAAAAQAPT/AQAAAAAAAAARAPT/AQAAAAAAAAARAPX/AQAAAAAAAAARAPb/AQAAAAAAAAASAPb/AQAAAAAAAAASAPX/AQAAAAAAAAASAPT/AQAAAAAAAAATAPT/AQAAAAAAAAATAPX/AQAAAAAAAAATAPb/AQAAAAAAAAATAPf/AQAAAAAAAAASAPf/AQAAAAAAAAAUAPf/AQAAAAAAAAAUAPb/AQAAAAAAAAAUAPX/AQAAAAAAAAAUAPT/AQAAAAAAAAAVAPT/AQAAAAAAAAAVAPX/AQAAAAAAAAAVAPb/AQAAAAAAAAAWAPb/AQAAAAAAAAAWAPX/AQAAAAAAAAAWAPT/AQAAAAAAAAAXAPT/AQAAAAAAAAAXAPX/AQAAAAAAAAAYAPX/AQAAAAAAAAAYAPT/AQAAAAAAAAAZAPT/AQAAAAAAAAAZAPX/AQAAAAAAAAAaAPT/AQAAAAAAAAAbAPT/AQAAAAAAAAAbAPX/AQAAAAAAAAAcAPX/AQAAAAAAAAAcAPT/AQAAAAAAAAAdAPT/AQAAAAAAAAAdAPX/AQAAAAAAAAAdAPb/AQAAAAAAAAAeAPb/AQAAAAAAAAAeAPX/AQAAAAAAAAAeAPT/AQAAAAAAAAAfAPT/AQAAAAAAAAAfAPX/AQAAAAAAAAAfAPb/AQAAAAAAAAAfAPf/AQAAAAAAAAAgAPf/AQAAAAAAAAAgAPb/AQAAAAAAAAAgAPX/AQAAAAAAAAAgAPT/AQAAAAAAAAAhAPT/AQAAAAAAAAAhAPX/AQAAAAAAAAAhAPb/AQAAAAAAAAAhAPf/AQAAAAAAAAAhAPj/AQAAAAAAAAAiAPj/AQAAAAAAAAAiAPf/AQAAAAAAAAAiAPb/AQAAAAAAAAAiAPX/AQAAAAAAAAAiAPT/AQAAAAAAAAAjAPT/AQAAAAAAAAAjAPX/AQAAAAAAAAAjAPb/AQAAAAAAAAAjAPf/AQAAAAAAAAAjAPj/AQAAAAAAAAAjAPn/AQAAAAAAAAAkAPn/AQAAAAAAAAAkAPj/AQAAAAAAAAAkAPf/AQAAAAAAAAAkAPb/AQAAAAAAAAAkAPX/AQAAAAAAAAAkAPT/AQAAAAAAAAAlAPT/AQAAAAAAAAAlAPX/AQAAAAAAAAAlAPb/AQAAAAAAAAAlAPf/AQAAAAAAAAAlAPj/AQAAAAAAAAAlAPn/AQAAAAAAAAAmAPn/AQAAAAAAAAAmAPj/AQAAAAAAAAAmAPf/AQAAAAAAAAAmAPb/AQAAAAAAAAAmAPX/AQAAAAAAAAAmAPT/AQAAAAAAAAAnAPT/AQAAAAAAAAAnAPX/AQAAAAAAAAAnAPb/AQAAAAAAAAAnAPf/AQAAAAAAAAAnAPj/AQAAAAAAAAAnAPn/AQAAAAAAAAAoAPn/AQAAAAAAAAAoAPj/AQAAAAAAAAAoAPf/AQAAAAAAAAAoAPb/AQAAAAAAAAAoAPX/AQAAAAAAAAAoAPT/AQAAAAAAAAApAPT/AQAAAAAAAAApAPX/AQAAAAAAAAApAPb/AQAAAAAAAAApAPf/AQAAAAAAAAApAPj/AQAAAAAAAAApAPn/AQAAAAAAAAAqAPn/AQAAAAAAAAAqAPj/AQAAAAAAAAAqAPf/AQAAAAAAAAAqAPb/AQAAAAAAAAAqAPX/AQAAAAAAAAAqAPT/AQAAAAAAAAArAPT/AQAAAAAAAAArAPX/AQAAAAAAAAArAPb/AQAAAAAAAAArAPf/AQAAAAAAAAArAPj/AQAAAAAAAAArAPn/AQAAAAAAAAAsAPn/AQAAAAAAAAAsAPj/AQAAAAAAAAAsAPf/AQAAAAAAAAAsAPb/AQAAAAAAAAAsAPX/AQAAAAAAAAAsAPT/AQAAAAAAAAAtAPT/AQAAAAAAAAAtAPX/AQAAAAAAAAAtAPb/AQAAAAAAAAAtAPf/AQAAAAAAAAAtAPj/AQAAAAAAAAAtAPn/AQAAAAAAAAAuAPn/AQAAAAAAAAAuAPj/AQAAAAAAAAAuAPf/AQAAAAAAAAAuAPb/AQAAAAAAAAAuAPX/AQAAAAAAAAAuAPT/AQAAAAAAAAAvAPT/AQAAAAAAAAAvAPX/AQAAAAAAAAAvAPb/AQAAAAAAAAAvAPf/AQAAAAAAAAAvAPj/AQAAAAAAAAAvAPn/AQAAAAAAAAAvAPr/AQAAAAAAAAAuAPr/AQAAAAAAAAAwAPr/AQAAAAAAAAAwAPn/AQAAAAAAAAAwAPj/AQAAAAAAAAAwAPf/AQAAAAAAAAAwAPb/AQAAAAAAAAAwAPX/AQAAAAAAAAAwAPT/AQAAAAAAAAAxAPT/AQAAAAAAAAAxAPX/AQAAAAAAAAAxAPb/AQAAAAAAAAAxAPf/AQAAAAAAAAAxAPj/AQAAAAAAAAAxAPn/AQAAAAAAAAAxAPr/AQAAAAAAAAAyAPr/AQAAAAAAAAAyAPn/AQAAAAAAAAAyAPj/AQAAAAAAAAAyAPf/AQAAAAAAAAAyAPb/AQAAAAAAAAAyAPX/AQAAAAAAAAAyAPT/AQAAAAAAAAAzAPT/AQAAAAAAAAAzAPX/AQAAAAAAAAAzAPb/AQAAAAAAAAAzAPf/AQAAAAAAAAAzAPj/AQAAAAAAAAAzAPn/AQAAAAAAAAAzAPr/AQAAAAAAAAA0APr/AQAAAAAAAAA0APn/AQAAAAAAAAA0APj/AQAAAAAAAAA0APf/AQAAAAAAAAA0APb/AQAAAAAAAAA0APX/AQAAAAAAAAA0APT/AQAAAAAAAAA1APT/AQAAAAAAAAA1APX/AQAAAAAAAAA1APb/AQAAAAAAAAA1APf/AQAAAAAAAAA1APj/AQAAAAAAAAA1APn/AQAAAAAAAAA1APr/AQAAAAAAAAA2APr/AQAAAAAAAAA2APn/AQAAAAAAAAA2APj/AQAAAAAAAAA2APf/AQAAAAAAAAA2APb/AQAAAAAAAAA2APX/AQAAAAAAAAA2APT/AQAAAAAAAAA3APT/AQAAAAAAAAA3APX/AQAAAAAAAAA3APb/AQAAAAAAAAA3APf/AQAAAAAAAAA3APj/AQAAAAAAAAA3APn/AQAAAAAAAAA3APr/AQAAAAAAAAA4APr/AQAAAAAAAAA4APn/AQAAAAAAAAA4APj/AQAAAAAAAAA4APf/AQAAAAAAAAA4APb/AQAAAAAAAAA4APX/AQAAAAAAAAA4APT/AQAAAAAAAAA5APT/AQAAAAAAAAA5APX/AQAAAAAAAAA5APb/AQAAAAAAAAA5APf/AQAAAAAAAAA5APj/AQAAAAAAAAA5APn/AQAAAAAAAAA6APn/AQAAAAAAAAA6APj/AQAAAAAAAAA6APf/AQAAAAAAAAA7APf/AQAAAAAAAAA7APb/AQAAAAAAAAA7APX/AQAAAAAAAAA7APT/AQAAAAAAAAA7APP/AQAAAAAAAAA8APP/AQAAAAAAAAA8APT/AQAAAAAAAAA8APX/AQAAAAAAAAA8APb/AQAAAAAAAAA8APf/AQAAAAAAAAA8APj/AQAAAAAAAAA7APj/AQAAAAAAAAA7APn/AQAAAAAAAAA8APn/AQAAAAAAAAA9APn/AQAAAAAAAAA9APj/AQAAAAAAAAA9APf/AQAAAAAAAAA9APb/AQAAAAAAAAA9APX/AQAAAAAAAAA9APT/AQAAAAAAAAA9APP/AQAAAAAAAAA+APP/AQAAAAAAAAA+APT/AQAAAAAAAAA+APX/AQAAAAAAAAA+APb/AQAAAAAAAAA+APf/AQAAAAAAAAA+APj/AQAAAAAAAAA+APn/AQAAAAAAAAA/APj/AQAAAAAAAAA/APf/AQAAAAAAAAA/APb/AQAAAAAAAAA/APX/AQAAAAAAAAA/APT/AQAAAAAAAAA/APP/AQAAAAAAAABAAPP/AQAAAAAAAABAAPT/AQAAAAAAAABAAPX/AQAAAAAAAABAAPb/AQAAAAAAAABAAPf/AQAAAAAAAABAAPj/AQAAAAAAAABMAPn/AQAAAAAAAABLAPn/AQAAAAAAAABKAPn/AQAAAAAAAABJAPn/AQAAAAAAAABIAPn/AQAAAAAAAABHAPn/AQAAAAAAAABNAPn/AQAAAAAAAABOAPn/AQAAAAAAAABPAPn/AQAAAAAAAABPAPr/AQAAAAAAAABQAPr/AQAAAAAAAABQAPn/AQAAAAAAAABXAPv/AQAAAAAAAABXAPr/AQAAAAAAAABXAPn/AQAAAAAAAABXAPj/AQAAAAAAAABXAPf/AQAAAAAAAABXAPb/AQAAAAAAAABXAPX/AQAAAAAAAABXAPT/AQAAAAAAAABXAPP/AQAAAAAAAABWAPP/AQAAAAAAAABVAPP/AQAAAAAAAABVAPT/AQAAAAAAAABVAPX/AQAAAAAAAABVAPb/AQAAAAAAAABVAPf/AQAAAAAAAABVAPj/AQAAAAAAAABVAPn/AQAAAAAAAABVAPr/AQAAAAAAAABVAPv/AQAAAAAAAABVAPz/AQAAAAAAAABVAP3/AQAAAAAAAABUAP3/AQAAAAAAAABVAP7/AQAAAAAAAABVAP//AQAAAAAAAABWAP//AQAAAAAAAABWAP7/AQAAAAAAAABWAP3/AQAAAAAAAABWAPz/AQAAAAAAAABWAPv/AQAAAAAAAABWAPr/AQAAAAAAAABWAPn/AQAAAAAAAABWAPj/AQAAAAAAAABWAPf/AQAAAAAAAABWAPb/AQAAAAAAAABWAPX/AQAAAAAAAABWAPT/AQAAAAAAAABXAPz/AQAAAAAAAABXAP3/AQAAAAAAAABXAP7/AQAAAAAAAABXAP//AQAAAAAAAABYAP//AQAAAAAAAABYAP7/AQAAAAAAAABYAP3/AQAAAAAAAABYAPz/AQAAAAAAAABYAPv/AQAAAAAAAABYAPr/AQAAAAAAAABYAPn/AQAAAAAAAABYAPj/AQAAAAAAAABYAPf/AQAAAAAAAABYAPb/AQAAAAAAAABYAPX/AQAAAAAAAABYAPT/AQAAAAAAAABYAPP/AQAAAAAAAABZAPP/AQAAAAAAAABZAPT/AQAAAAAAAABZAPX/AQAAAAAAAABZAPb/AQAAAAAAAABZAPf/AQAAAAAAAABZAPj/AQAAAAAAAABZAPn/AQAAAAAAAABZAPr/AQAAAAAAAABZAPv/AQAAAAAAAABZAPz/AQAAAAAAAABZAP3/AQAAAAAAAABZAP7/AQAAAAAAAABZAP//AQAAAAAAAAAlAAMAAQAAAAAAAAAmAAMAAQAAAAAAAAAnAAMAAQAAAAAAAAAoAAMAAQAAAAAAAAApAAMAAQAAAAAAAAAqAAIAAQAAAAAAAAArAAIAAQAAAAAAAAAsAAIAAQAAAAAAAAAtAAEAAQAAAAAAAAAuAAEAAQAAAAAAAAAvAAEAAQAAAAAAAAAvAAIAAQAAAAAAAAAuAAIAAQAAAAAAAAAtAAIAAQAAAAAAAAAsAAMAAQAAAAAAAAArAAMAAQAAAAAAAAAqAAMAAQAAAAAAAAA5AAMAAQAAAAAAAAA6AAMAAQAAAAAAAAA7AAMAAQAAAAAAAAA8AAMAAQAAAAAAAAA9AAMAAQAAAAAAAAA+AAMAAQAAAAAAAAA/AAMAAQAAAAAAAABAAAMAAQAAAAAAAABBAAMAAQAAAAAAAABCAAMAAQAAAAAAAABDAAMAAQAAAAAAAABEAAMAAQAAAAAAAABKAPv/AQAAAAAAAABLAPz/AQAAAAAAAABLAPv/AQAAAAAAAAA=")
tile_set = ExtResource("2_k2r8s")

[node name="Player" parent="." instance=ExtResource("3_bhmet")]

[node name="CamLeftBottom" type="Marker2D" parent="."]
position = Vector2(-640, 640)
script = ExtResource("4_1273t")
auto_activate = true
vert_boundry = 1
horz_boundry = 0
metadata/_custom_type_script = "uid://dbf8r7wqq34yj"

[node name="CamRightTop" type="Marker2D" parent="."]
position = Vector2(10880, -896)
script = ExtResource("4_1273t")
auto_activate = true
vert_boundry = 0
horz_boundry = 1
metadata/_custom_type_script = "uid://dbf8r7wqq34yj"

[node name="SpawnInit" type="Marker2D" parent="."]
position = Vector2(0, 256)

[node name="GoalFlag" parent="." instance=ExtResource("5_0ickf")]
position = Vector2(11136, 512)

[node name="LevelBoundry" parent="." instance=ExtResource("6_0ickf")]
position = Vector2(0, 1280)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelBoundry"]
shape = SubResource("WorldBoundaryShape2D_mmyqp")

[node name="TrigCamInit" parent="." instance=ExtResource("7_wp2ok")]
run_enter = true
run_leave = true

[node name="TriggerCameraZoom" type="Node2D" parent="TrigCamInit"]
script = ExtResource("8_tdsja")
enter_zoom = Vector2(0.75, 0.75)
enter_time = 1.25
leave_zoom = Vector2(0.5, 0.5)
leave_time = 1.25
metadata/_custom_type_script = "uid://ccq3bxklty4a6"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrigCamInit"]
position = Vector2(128, 64)
shape = SubResource("RectangleShape2D_qwbac")
